[package]
name = "ukf"
version = "0.1.0"
edition = "2021"

[lib]
name = "ukf"
crate_type = ["cdylib"]


[dependencies]
arrayvec = "0.7.2"
ndarray = {version = "0.15.6", features= ["approx-0_5"]}
approx = "0.5.1"
ndarray-linalg = {version="0.16.0", features = ["openblas-static"]}
pyo3 = {version = "0.19.0", features = ["extension-module"]}
numpy = "0.19.0"
pyo3-log = "0.8.2"
log = "0.4.19"

# [build-dependencies]
# maturin = "1.0.1"