[package]
name = "ukf_pyrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "ukf_pyrs"
crate_type = ["cdylib"]

[dependencies]
arrayvec = "0.7.2"
ndarray = { version = "0.15.6", features = ["approx-0_5"] }
approx = "0.5.1"
ndarray-linalg = { version = "0.16.0", features = ["openblas-static"] }
ndarray-rand = "0.14.0"
pyo3 = { version = "0.19.0", features = ["extension-module"] }
numpy = "0.19.0"
pyo3-log = "0.8.2"
rand = "0.8.5"
log = "0.4.19"
# opencv = "0.83.0"
