[build-system]
requires = ["setuptools", "wheel", "maturin"]
build-backend = "maturin"

[project]
name = "ukf_pyrs"
version = "0.1.0"
dependencies = [
    "opencv-python",
    "filterpy",
    "matplotlib",
    "maturin",
    "numba",
    "numpy",
    "wheel",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "jupyter", "mypy"]
test = ["pytest"]
