[build-system]
requires = ["setuptools", "wheel", "maturin>=1.1"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "ukf_pyrs.ukf_pyrs"



[project]
name = "ukf_pyrs"
version = "0.1.0"
dependencies = [
    "opencv-python",
    "filterpy",
    "matplotlib",
    "maturin",
    "numba",
    "numpy",
    "wheel",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "jupyter", "mypy"]
test = ["pytest"]
