[build-system]
requires = ["maturin>=1.1", "setuptools", "wheel"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "ukf_pyrs.ukf_pyrs"


[project]
name = "ukf_pyrs"
version = "0.1.0"
dependencies = [
    "filterpy",
    "matplotlib",
    "maturin",
    "numba",
    "numpy",
    "opencv-python",
    "wheel",
]

[project.optional-dependencies]
dev = ["black", "jupyter", "mypy", "pyspy", "pytest", "ruff", "maturin"]
test = ["pytest"]
